--- a/cron.conf
+++ b/cron.conf
@@ -1,1 +1,1 @@
-*/1 * * * * /Users/yuji/Documents/datastore-for-tradeAI/accumulater.sh
+0 12 * * * /Users/yuji/Documents/datastore-for-tradeAI/accumulater.sh
