[update] logger and environment setting

--- a/cron.conf
+++ b/cron.conf
@@ -1,1 +1,1 @@
-0 12 * * * /Users/yuji/Documents/datastore-for-tradeAI/accumulater.sh
+0 12 * * * /Users/yuji/Documents/cryptowatch-datastore/accumulater.sh >> /Users/yuji/Documents/cryptowatch-datastore/logs/cron.log 2>&1
