--- a/data_collecter/cron.conf
+++ b/data_collecter/cron.conf
@@ -1,1 +1,1 @@
-* * * * * /usr/local/bin/python /data_collecter_app/app/main.py >> /var/log/cron.log 2>&1
+0 12 * * * /usr/local/bin/python /data_collecter_app/app/main.py >> /var/log/cron.log 2>&1
