--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,8 @@ version: '3'
 services:
   data_collecter:
     build: ./data_collecter
+    image: yujik/cryptowatch-datastore-data-collecter:3.0
+    platform: linux/amd64
     volumes:
       - type: bind
         source: "./data"
@@ -11,6 +13,8 @@ services:
         target: "/.env"
   api_server:
     build: ./api_server
+    image: yujik/cryptowatch-datastore-api_server:3.0
+    platform: linux/amd64
     ports:
       - "8080:8080"
     volumes:
